added all 3 questions

--- a/index.html
+++ b/index.html
@@ -3,25 +3,68 @@
   <head>
     <title>N2 Assignment</title>
     <script type="text/javascript">
+    console.log("Asking user for his/her name...");
+    var userName = prompt("Please enter your name.")
 
-    var answer = prompt("Did you ever code before");
-    if (answer === "yes"){
-      alert("nice");
+    console.log("Asking user Question1");
+    var answer1 = prompt("True or False? Coffee in the United States is only grown in Hawaii and Puerto Rico.");
+    if (answer1 === "true"){
+      alert("Great!! " + userName + " ,you got it.");
     } else{
-      alert("bad");
+      alert("Sorry:( " + userName +" ,you missed this one.");
     }
+
+    console.log("Asking user Question2");
+    var answer1 = prompt("True or False? Robusta coffee beans have three times as much caffeine than Arabica beans, but our of less quality.");
+    if (answer1 === "false"){
+      alert("Great!! " + userName + ". Your answer is correct.");
+    } else{
+      alert("Sorry:( " + userName +". It is only twice as much.");
+    }
+
+    console.log("Asking user Question3");
+    var answer1 = prompt("True or False? Black coffee with no additives contains no calories.");
+    if (answer1 === "true"){
+      alert("Great!! " + userName + ". Your answer is correct.");
+    } else{
+      alert("Sorry:( " + userName +" ,you missed this one.");
+    }
+
+
+
+
 
     </script>
 
 
 
 
-  </head>
-  <body>
-    <h1>Guessing Game</h1>
+    <body align="center">
 
-  </body>
+     <h1>Welcome to Xyz Coffee Roasters  </h1>
+     <hr>
+
+      <p> XYZ&trade; Coffee is about pleasure. It’s that moment when your
+         hand is warmed by the mug, you bring it up to your nose,
+          inhale deeply and then take a sip.
+          <br><br >We currently offer 3 types of coffee:</p>
+
+       <ul align="left">
+        <li>X coffee <i>&#36;14.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">Buy Now!!</a></li>
+        <li>Y coffee <i>&#36;12.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">Trending!!</a></li>
+        <li>Z coffee <i>&#36;11.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">On Sale!!</a></li>
+       </ul>
+
+     <p>Even though we offer three types of coffee, they taste <b>exactly same</b> </p>
+     <b></p>
+
+     <h2></h2>
+     <p></p>
 
 
 
-</html>
+
+    </body>
+
+
+   </html>
