--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
-<!DOCTYPE html>
+<!DOCTYpe html>
 <html>
-  <head>
-    <title>N2 Assignment</title>
-    <script type="text/javascript" src="game.js"></script>
 
-    <body align="center">
+<head>
+  <title>Guessing Game</title>
+  <link rel = "stylesheet" type = "text/css" href = "info.css" />
+</head>
 
-     <h1>Welcome to Xyz Coffee Roasters  </h1>
-     <hr>
+<body>
+  <div id="master">
+    <div id="header">
+      <h1>erdem koral</h1>
+    </div>
+    <div id="content">
+      <div id="container1">
+        <p>Hi, I am so glad that you are here, visiting my super cool to be web site. I am currently studying software development at Code Fellows PDX and this is my firs web site. I am sure there will be a lot of improvements as I learn more about html, css and javascript concepts and applications. It is a work in progress, so please check this web site every once in a while to see my ass kicking progress.<br/> Let me tell you about myself a little bit;</p>
+        <p>I have been working in dental field since 2010, as a maxillofacial surgical assistant, dental technician/ceramist and most recently dental laboratory owner( I make teeth). I am the founder of Original32 Dental Lab, and serving dental professionals in metro Portland Area. For more info about Original32 please  <a class="a" href="https://www.original32.com" target="_blank">Click Here!!</a>
+        </p>
+        <p>Originally from Turkey, I have lived in Boston for the last decade. My family and I recently relocated to Oregon to be closer to family and experience a new lifestyle in the country. We began transitioning this summer, and after some international travel and a cross-country road-trip we arrived in Hillsboro about six months  ago. While bittersweet to leave our friends and careers in Boston, I am optimistic and ready to establish myself in metro Portland area.</p>
 
-      <p> XYZ&trade; Coffee is about pleasure. It’s that moment when your
-         hand is warmed by the mug, you bring it up to your nose,
-          inhale deeply and then take a sip.
-          <br><br >We currently offer 3 types of coffee:</p>
+        <p>I am 33 years old and getting older ’n older like everyone else :) I have
+          two wonderful children; Emre and Leyla. Emre is 4yrs old and he is
+          attending to a pre school program at West Side Montessori. Leyla is 6 yrs
+          old and she is a kindergartner at FarmingtonView Elementary School. My
+          beautiful wife Sierra and I met almost 10 years ago and have been married
+          for almost 9 years. It has been the best years of my life. We like to
+          spend time with family&amp;friends and enjoy the outdoors.
+          <br/>
+          My hobbies are:</p>
+          <dt>
+            <dd>Working on anything with an engine (2 cycle, 4 cycle)</dd>
+            <dd>Helping Sierra with gardening (mostly building structures)</dd>
+            <dd>Roastin, Sizzlin&amp;Grillin</dd>
+            <dd>Binge watching tv series</dd>
+            <dd>Camping,fishing and hunting</dd>
+          </dt>
 
-       <ul align="left">
-        <li>X coffee <i>&#36;14.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">Buy Now!!</a></li>
-        <li>Y coffee <i>&#36;12.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">Trending!!</a></li>
-        <li>Z coffee <i>&#36;11.00</i> lbs <a href="https://www.amazon.com/Folgers-Classic-Roast-Ground-Coffee/dp/B010ULFOWC/ref=sr_1_4_s_it?s=grocery&ie=UTF8&qid=1486525320&sr=1-4&keywords=coffee&th=1">On Sale!!</a></li>
-       </ul>
+          <p>If you have similar interests, shoot me an email at <a class="a" href= mailto:"koral.erdem@gmail.com">koral.erdem@gmail.com</a></p>
 
-     <p>Even though we offer three types of coffee, they taste <b>exactly same</b> </p>
-     <b></p>
+          <p>Thank you for playing the <strong>GuessingGame</strong>. Here are your answers and results:</p>
+          <ol>
+            <li id="answer1"></li>
+            <li id="answer2"></li>
+            <li id="answer3"></li>
+            <li id="answer4"></li>
+            <li id="answer5"></li>
+            <li id="answer6"></li>
+          </ol>
+          <h3 id="scoreBoard"></h3>
+        </div>
 
-     <h2></h2>
-     <p></p>
+        <div id="container2">
+          <img src="images/family.jpg"  alt="fishing" width= "70%"  />
+          <img src="images/fish.jpg"  alt="fishing" width= "70%"  />
+          <img src="images/mountain.jpg"  alt="fishing" width= "70%"  />
+        </div>
+      </div>
+  </div>
+  <script src="game.js"></script>
+</body>
 
-
-
-
-    </body>
-
-
-   </html>
+</html>
